@@ -1,3 +1,7 @@
+2015-10-12  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* generator: Fixed typo.
+
 2015-10-03  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* ext/opengl_c: Added some experimental codes.
